--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,28 @@
     margin:0;
     box-sizing:border-box;
 }
+.active{
+    color:white !important;
+    font-weight: bold !important;
+
+}
+body{
+    background:#141414;
+}
+@media only screen and (max-width: 768px) {
+    .menu-item {
+      display: none !important;
+    }
+    .m-left{
+        margin-left:0rem !important;
+        margin-right:0rem !important;
+    }
+    .logo{
+        margin-top:1rem !important;
+    }
+  }
+
+.menu-item {
+    color:#e5e5e5;
+    font-family: Arial, Helvetica, sans-serif;
+  }
