--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,16 @@
     margin:0;
     box-sizing:border-box;
 }
+.main-jumbotron{
+    background: url('https://leadergamer.com.tr/app/uploads/2019/08/Spider-Man-Far-From-Home.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 85vh;
+    margin-top: -5%;
+}
 body{
     background:#141414;
 }
@@ -10,6 +20,9 @@ body{
     color:white !important;
     font-weight: bold !important;
 
+}
+.Home{
+    margin-top: 5% !important;
 }
 
 .movie-slides{
