--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
 }
 body{
     background:#141414;
+    font-family: sans-serif !important;
+    box-sizing: border-box;
 }
 .active{
     color:white !important;
@@ -51,19 +53,28 @@ body{
     font-size: 40px !important;
     position: absolute;
     z-index: 5;
-    top:50px;
-    left:-48px;
+    top:3px;
+    left:-60px;
+    padding-left: 10px;
+    font-size: 50px !important;
+    background-color: rgba(0,0,0,0.5);
+    height: 19vh !important;
 }
 .arrow-left:hover{
     display:block !important;
     cursor:pointer;
 }
 .arrow-right{
+    background-color: rgba(0,0,0,0.5);
+    height: 19vh !important;
     color:white;
     font-size: 40px !important;
     position: absolute;
-    top:50px;
-    left:-40px;
+    top:3px;
+    font-size: 90px !important;
+
+    left:-90px;
+    padding: 26px;
     cursor: pointer;
 }
 
@@ -82,5 +93,53 @@ body{
 
 .menu-item {
     color:#e5e5e5;
-    font-family: Arial, Helvetica, sans-serif;
   }
+  .who-watch-all{
+      position: absolute;
+      top: 30.5%;
+      left: 26.5%;
+      color: white;
+  }
+ .who-watch{
+     display: flex;
+     gap: 1.9rem;
+     flex-wrap: wrap;
+     margin-top: 4.5%;
+     width: 100%;
+ }
+ .acc-pic{
+     border-radius: 6px;
+     height: 21vh;
+     cursor: pointer;
+     object-fit: cover;
+ }
+ .who-watch-text{
+     text-align: center;
+     font-size: 3.2rem;
+     font-weight: 500;
+ }
+ .who-text{
+     text-align: center;
+     font-size: 1.3rem;
+     color: #808080;
+     margin-top: 2%;
+ }
+.add-profile{
+    width: 156px;
+    height: 156px;
+    position: relative;
+    cursor: pointer;
+    border-radius: 6px;
+}
+.add-profile:hover{
+    background: #E5E5E5;
+}
+.add-icon{
+    margin-left:15px !important;
+    margin-top: 8%;
+    font-size: 8rem !important;
+   color: #808080;
+}
+.ptext{
+    margin-top: 6.5%;
+}
