--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@ body{
  }
  .acc-pic-two{
     border-radius: 6px;
-    height: 16vh;
+    height: 15vh;
     cursor: pointer;
     object-fit: cover;
  }
@@ -163,23 +163,24 @@ body{
     margin-left: 15.5%;
 }
 .new-profile{
-    position: absolute;
-    left:30%;
-    top:25%;
-    width: 40%;
+ width: 40%;
+ margin: 0 auto;
+ margin-top: 15%;
 }
-::-webkit-input-placeholder { /* Edge */
-    color: white;
+input::-webkit-input-placeholder { /* WebKit browsers */
+    color: #CCCCCC;
     font-size: 1.5rem;
   }
-  
-  :-ms-input-placeholder { /* Internet Explorer */
-    color: white;
+  input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
     font-size: 1.5rem;
   }
-  
-  ::placeholder {
-    color: white;
+  input::-moz-placeholder { /* Mozilla Firefox 19+ */
     font-size: 1.5rem;
   }
-  
+  input:-ms-input-placeholder { /* Internet Explorer 10+ */
+    font-size: 1.5rem;
+  }
+  input, select, textarea{
+    color: white;
+    padding-left: 20px;
+}
