--- a/src/App.css
+++ b/src/App.css
@@ -80,9 +80,6 @@ body{
 }
 
 @media only screen and (max-width: 1200px){
-  .who-text{
-      font-size: 1.2rem !important;
-  }
   .acc-pic{
     border-radius: 6px;
     height: 25vh !important;
@@ -91,7 +88,6 @@ body{
 }
 }
 @media only screen and (max-width: 767px) {
- 
     .menu-item {
       display: none !important;
     }
@@ -110,23 +106,23 @@ body{
   .who-watch-all{
     width: 70%;
     margin: 0 auto;
-    margin-top: 15%;
+    margin-top: 12%;
   }
  .who-watch{
      display: flex;
      justify-content: center;
-     gap: 2.5rem;
+     gap: 2rem;
      flex-wrap: wrap;
  }
  .acc-pic{
      border-radius: 6px;
-     height: 19vh;
+     height: 20vh;
      cursor: pointer;
      object-fit: cover;
  }
  .acc-pic-two{
     border-radius: 6px;
-    height: 15vh;
+    height: 16.5vh;
     cursor: pointer;
     object-fit: cover;
  }
@@ -136,51 +132,30 @@ body{
      font-weight: 500;
      color:white;
  }
- .who-text{
-     text-align: center;
-     font-size: 1.5rem;
-     color: #808080;
-     margin-top: 4%;
- }
+.new-profile{
+ width: 41%;
+ margin: 0 auto;
+ margin-top: 11.5%;
+}
+
 .add-profile{
-    width: 115%;
-    height: 18.5vh;
-    position: relative;
-    cursor: pointer;
+    display:flex;
+    height: 20vh;
+    justify-content: center;
+    align-items: center;
+    color: #4E4E4E;
+    padding: 10px 25px;
     border-radius: 6px;
 }
 .add-profile:hover{
-    background: #E5E5E5;
+    background-color: #E5E5E5;
 }
 .add-icon{
-    margin-left:25px !important;
-    margin-top: 15%;
-    font-size: 8rem !important;
+    font-size: 6rem !important;
+}
+.who-text{
     color: #808080;
-}
-.ptext{
-    margin-top: 9%;
-    margin-left: 15.5%;
-}
-.new-profile{
- width: 40%;
- margin: 0 auto;
- margin-top: 15%;
-}
-input::-webkit-input-placeholder { /* WebKit browsers */
-    color: #CCCCCC;
-    font-size: 1.5rem;
-  }
-  input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    font-size: 1.5rem;
-  }
-  input::-moz-placeholder { /* Mozilla Firefox 19+ */
-    font-size: 1.5rem;
-  }
-  input:-ms-input-placeholder { /* Internet Explorer 10+ */
-    font-size: 1.5rem;
-  }
-  input, select, textarea{
-    color: white;
-    padding-left: 20px;
+    font-size: 20px;
+    margin-top: 5%;
+    text-align: center;
 }
