--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,11 @@ body{
     background-position: center;
 }
 
+.movie-slides:hover + .slider-icons-all{
+    display:flex !important;
+    gap: 0.5rem;
+}
+
 .half-width{
     margin-top: 1%;
     margin-left: 4%;
@@ -48,7 +53,6 @@ body{
     margin-top: 1%;
     width:100% !important;
     overflow: hidden !important;
-
 }
 .arrow-left{
     color:white;
@@ -103,6 +107,9 @@ body{
    }
   }
 
+.kenk:hover  .profile-bar{
+    display: block;
+}
 @media only screen and (max-width: 1200px){
   .acc-pic{
     border-radius: 6px;
@@ -146,7 +153,7 @@ body{
     color:#e5e5e5;
   }
   .who-watch-all{
-    width: 70%;
+    width: 100%;
     margin: 0 auto;
     margin-top: 12%;
   }
@@ -208,6 +215,26 @@ body{
     top:75px;
     right:17px;
     background-color: black;
+    display: none;
+}
+.ll{
+    position: absolute;
+    top: -7.5%;
+    left: 65%;
+    width: 35%;
+}
+.profile-manager{
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 5.3%;
+    border: 1px solid #808080;
+    width: 13.5%;
+    color:#808080;
+    font-size: 0.7rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    padding: 12px;
+    cursor: pointer;
 }
 .list-li{
     font-size: 0.8rem;
@@ -229,4 +256,24 @@ body{
 }
 .ptext{
     margin-top: 12px;
+}
+.nav-link{
+    text-decoration: none;
+    color: #808080;
+}
+.slider-icons-all{
+    display: flex;
+    display: none;
+}
+.slider-icons{
+    color: #666;
+    font-size: 2rem !important;
+    margin-top: 10px;
+}
+.play-first{
+    color: white;
+}
+.slider-last{
+    align-self: flex-end !important;
+    flex: 1;
 }
